<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultsActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/name_and_surname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewName"
        app:layout_constraintStart_toEndOf="@id/textViewName" />

    <TextView
        android:id="@+id/textViewAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewName" />

    <TextView
        android:id="@+id/textViewAgeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewAge"
        app:layout_constraintStart_toEndOf="@id/textViewAge" />

    <TextView
        android:id="@+id/textViewCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewAge" />

    <TextView
        android:id="@+id/textViewCityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewCity"
        app:layout_constraintStart_toEndOf="@id/textViewCity" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewCity" />

    <TextView
        android:id="@+id/textViewEmailValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewEmail"
        app:layout_constraintStart_toEndOf="@id/textViewEmail" />

    <TextView
        android:id="@+id/textViewResponse1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/response_1"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewEmail" />

    <TextView
        android:id="@+id/textViewResponse1Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewResponse1"
        app:layout_constraintStart_toEndOf="@id/textViewResponse1" />

    <TextView
        android:id="@+id/textViewResponse2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/response_2"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewResponse1" />

    <TextView
        android:id="@+id/textViewResponse2Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewResponse2"
        app:layout_constraintStart_toEndOf="@id/textViewResponse2" />

    <TextView
        android:id="@+id/textViewResponse3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/response_3"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewResponse2" />

    <TextView
        android:id="@+id/textViewResponse3Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@id/textViewResponse3"
        app:layout_constraintStart_toEndOf="@id/textViewResponse3" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="GİRİŞE DÖN"
        app:layout_constraintEnd_toEndOf="@id/textViewNameValue"
        app:layout_constraintStart_toStartOf="@id/textViewName"
        app:layout_constraintTop_toBottomOf="@id/textViewResponse3" />

</androidx.constraintlayout.widget.ConstraintLayout>
